crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_merge_bind_value_and_on_input.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
export const FieldInput = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const _u6BtPnK76q4 = () => {
  const localValue = useSignal("");

  return (
    <input
      onInput$={() => {
        console.log("test");
      }}
      bind:value={localValue}
    />
  );
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    268
  ]
}
*/
== DIAGNOSTICS ==
[]
