crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_move_props_related_to_iteration_variables_to_var_props.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
import { TestComponent } from "./testComponent";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export const Child = /*#__PURE__*/ componentQrl(q__u6BtPnK76q4);

============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { TestComponent } from "./testComponent";
import { useSignal } from "@qwik.dev/core";
export const _u6BtPnK76q4 = () => {
  const propCounterWithNested = useSignal(() => {
  return {
      data: [
        { attributeInArray: { counter: globalThis.propsCounter++ } },
        { attributeInArray: { counter: globalThis.propsCounter } },
      ],
    };
  })
  return (
    <div>
        {propCounterWithNested.value.data.map((item, index) => {
          return (
            <TestComponent
              counter={item.attributeInArray.counter}
              logString="Nested read through array"
              key={index}
            />
          );
        })}
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    128,
    703
  ]
}
*/
== DIAGNOSTICS ==
[]
