crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_auto_export_var_shadowed_in_catch.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { formActionQrl } from "forms";
import { qrl } from "@qwik.dev/core";
import { formAction$ } from "forms";
import { translate } from "i18n";
export const action = qrl(() => import("./test.tsx_action_formAction_dIQV5vh1He4"), "action_formAction_dIQV5vh1He4");

============================= test.tsx_action_formAction_dIQV5vh1He4.js (ENTRY POINT) ==
import { translate } from "i18n";
const t = translate();
export const action_formAction_dIQV5vh1He4 = (data) => {
	try {
		return { status: "success" };
	} catch (err) {
		const t = translate();
		return {
			status: "error",
			message: t("error-key")
		};
	}
};

/*
{
  "origin": "test.tsx",
  "name": "action_formAction_dIQV5vh1He4",
  "entry": null,
  "displayName": "test.tsx_action_formAction",
  "hash": "dIQV5vh1He4",
  "canonicalFilename": "test.tsx_action_formAction_dIQV5vh1He4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "formAction$",
  "captures": false,
  "loc": [
    118,
    292
  ],
  "paramNames": [
    "data"
  ]
}
*/
== DIAGNOSTICS ==
[]
