crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_auto_export_var_shadowed_in_do_while.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { formAction$ } from "forms";
export const action = qrl(() => import("./test.tsx_action_formAction_dIQV5vh1He4"), "action_formAction_dIQV5vh1He4");

============================= test.tsx_action_formAction_dIQV5vh1He4.js (ENTRY POINT) ==
const x = "module-level";
export const action_formAction_dIQV5vh1He4 = (data) => {
	let i = 0;
	do {
		const x = "shadowed";
		i++;
	} while (i < 3);
	return {};
};

/*
{
  "origin": "test.tsx",
  "name": "action_formAction_dIQV5vh1He4",
  "entry": null,
  "displayName": "test.tsx_action_formAction",
  "hash": "dIQV5vh1He4",
  "canonicalFilename": "test.tsx_action_formAction_dIQV5vh1He4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "formAction$",
  "captures": false,
  "loc": [
    86,
    199
  ],
  "paramNames": [
    "data"
  ]
}
*/
== DIAGNOSTICS ==
[]
