crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_not_auto_export_var_shadowed_in_labeled_block.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 980
expression: output
---
============================= test.js ==
import { formActionQrl } from "forms";
import { qrl } from "@qwik.dev/core";
//
const q_action_formAction_dIQV5vh1He4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_action_formAction_dIQV5vh1He4"), "action_formAction_dIQV5vh1He4");
//
export const action = formActionQrl(q_action_formAction_dIQV5vh1He4);
============================= test.tsx_action_formAction_dIQV5vh1He4.js (ENTRY POINT) ==
const x = "module-level";
export const action_formAction_dIQV5vh1He4 = (data) => {
	label: {
		const x = "shadowed";
		break label;
	}
	return {};
};

/*
{
  "origin": "test.tsx",
  "name": "action_formAction_dIQV5vh1He4",
  "entry": null,
  "displayName": "test.tsx_action_formAction",
  "hash": "dIQV5vh1He4",
  "canonicalFilename": "test.tsx_action_formAction_dIQV5vh1He4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "formAction$",
  "captures": false,
  "loc": [
    86,
    183
  ],
  "paramNames": [
    "data"
  ]
}
*/
== DIAGNOSTICS ==
[]
